--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,18 @@ dependencies {
     implementation 'org.mybatis:mybatis:3.4.6'
     implementation 'org.mybatis:mybatis-spring:1.3.2'
 
+    // 한국투자증권 API 관련
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
+
+    // 웹소켓
+//    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
+//
+//    implementation 'org.glassfish.tyrus:tyrus-server:1.17'
+//    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-server:1.17'
+//    implementation 'org.glassfish.tyrus:tyrus-client:1.17'
+//    implementation 'javax.websocket:javax.websocket-api:1.1'
+
 
     // 테스트
     testImplementation "org.springframework:spring-test:${springVersion}"
@@ -106,6 +118,11 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
+
+war {
+    webAppDirName = 'src/main/webapp'
+}
+
 
 
 test {
