--- a/build.gradle
+++ b/build.gradle
@@ -102,12 +102,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
 
     // 웹소켓
-//    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
-//
-//    implementation 'org.glassfish.tyrus:tyrus-server:1.17'
-//    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-server:1.17'
-//    implementation 'org.glassfish.tyrus:tyrus-client:1.17'
-//    implementation 'javax.websocket:javax.websocket-api:1.1'
+    implementation 'javax.websocket:javax.websocket-api:1.1'
+    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.17'
+    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
+
 
 
     // 테스트
