--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,7 @@ dependencies {
     implementation 'org.mybatis:mybatis:3.4.6'
     implementation 'org.mybatis:mybatis-spring:1.3.2'
 
-
+    implementation 'org.mybatis:mybatis-typehandlers-jsr310:1.0.2'
     // 테스트
     testImplementation "org.springframework:spring-test:${springVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
