refactor : 보안상 위험성 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,10 @@ spring.servlet.multipart.max-request-size=20MB
 server.port=8080
 server.servlet.context-path=/
 
+# CORS ?? (??/?? ???)
+server.cors.allowed-origins=http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173
+server.cors.allow-credentials=true
+
 # ??? ??
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
