fix : application.properties git 추적 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ jdbc.url=jdbc:mysql://kb-project.c102ac0ikirs.ap-northeast-2.rds.amazonaws.com:3
 jdbc.username=admin
 jdbc.password=${DB_PASSWORD}
 
-# OpenAI API ??
+# OpenAI API
 openai.api.key=${OPENAI_API_KEY}
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.api.model=gpt-3.5-turbo
