--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ build/
 # application.properties 무시
 src/main/resources/application.properties
 src/main/resources/config.properties
+src/main/webapp/resources/assets/
+src/main/webapp/resources/index.html
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
