fix: gitignore 관련

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ src/main/webapp/resources/index.html
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
+.idea/workspace.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
