--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ src/main/webapp/resources/index.html
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/dataSources.local.xml
 *.iws
 *.iml
 *.ipr
@@ -49,3 +50,5 @@ bin/
 
 src/main/webapp/resources/assets/
 src/main/webapp/resources/index.html
+
+kb_final.sql
