--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,9 @@ dependencies {
 
     // Lettuce 클라이언트 (기본 클라이언트로 추천)
     implementation 'io.lettuce:lettuce-core:6.1.8.RELEASE'
+
+
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 
