fix: 랭킹 데이터 저장해서 갖고 오게하기 종목분석 코드 수정

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 # (선택) JSON, YAML 등도 인코딩 강제하고 싶으면 아래 추가
 *.json text eol=lf working-tree-encoding=UTF-8
 *.yml  text eol=lf working-tree-encoding=UTF-8
+*.java text eol=lf
